syntax = "proto3";
package cosmos.base.hd.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/crypto/hd";

// BIP44Params wraps BIP 44 params (5 level BIP 32 path).
// To receive a canonical string representation ala
// m / purpose' / coinType' / account' / change / addressIndex
// call String() on a BIP44Params instance.
message BIP44Params {
	option (gogoproto.goproto_stringer) = false;

	uint32 purpose = 1;
	uint32 coin_type = 2;
	uint32 account = 3;
	bool change = 4;
	uint32 address_index = 5;
}
